<resources>
    <string name="app_name">Road Stats</string>
    <string name="title_speedometer">Speedometer</string>
    <string name="title_mileage">Mileage</string>
    <string name="title_settings">Settings</string>

    <string name="settings_menu">Настройки</string>
    <string name="chose_theme">Темная тема ON/OFF</string>
    <string name="term_of_use">Пользовательское соглашение</string>
</resources>